# everything-imu

./: .editorconfig  .gitignore  .lintstagedrc.mjs  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVICES.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md  biome.json  deny.toml  package.json  pnpm-lock.yaml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  label.yml  release.yml
apps/everything-imu-app/: Cargo.toml  tauri.conf.json
apps/everything-imu-app/icons/: icon.icns
apps/everything-imu-app/src/: commands.rs  crash_report.rs  haptics.rs  lib.rs  logging.rs  state.rs  steam_blacklist.rs  supervisor_boot.rs  tracker_emitter.rs  tray.rs  udev_install.rs  udp_haptic.rs  update_boot.rs  updater.rs
apps/headless-cli/: Cargo.toml
apps/headless-cli/src/: cli.rs  diagnostics.rs  doctor.rs  main.rs
apps/ui/: components.json  index.html  knip.json  package.json  vite.config.ts  vitest.setup.ts
apps/ui/__mocks__/: zustand.ts
apps/ui/src/: App.tsx  main.tsx  styles.css
apps/ui/src/api/: bindings.ts  client.ts
apps/ui/src/components/: ActivityFeed.tsx  AppShell.tsx  BiasDisplay.tsx  CinemaMode.tsx  CommandPalette.tsx  ConnectionStatusCard.tsx  EmptyState.tsx  EventBridge.tsx  GlobalSearch.tsx  KeyboardShortcuts.tsx  LatencyPanel.tsx  LogRow.tsx  MagCalibrationPanel.tsx  MultiSparkline.tsx  PerDeviceConfig.tsx  QuaternionDisplay.tsx  StatusBadge.tsx  StatusBar.tsx  TitleBar.tsx  ToastViewport.tsx  TrackerCard.tsx  TrackerViz.tsx
apps/ui/src/i18n/: index.ts  resources.ts
apps/ui/src/lib/: macFormat.ts  quat.ts
apps/ui/src/pages/: ConnectionPage.tsx  DashboardPage.tsx  DebugPage.tsx  DevicesPage.tsx  HapticsPage.tsx  HelpPage.tsx  LogsPage.tsx  SettingsPage.tsx  TrackerDetailPage.tsx
apps/ui/src/stores/: useActivityStore.test.ts  useActivityStore.ts  useBiasStore.test.ts  useBiasStore.ts  (+28 more)
companions/3ds/: Makefile  README.md
companions/3ds/source/: main.c
companions/vita/: CMakeLists.txt  README.md
companions/vita/src/: main.c
companions/wii/: Makefile  README.md
companions/wii/source/: main.c
crates/core/: Cargo.toml
crates/core/src/: app_state.rs  error.rs  lazy_slime.rs  lib.rs  pipeline.rs  quat.rs  supervisor.rs
crates/core/tests/: e2e_synth.rs  snapshot.rs
crates/device-3ds/: Cargo.toml
crates/device-3ds/src/: device.rs  factory.rs  lib.rs
crates/device-dualsense/: Cargo.toml
crates/device-dualsense/examples/: haptic.rs
crates/device-dualsense/src/: axis_remap.rs  device.rs  diagnostics.rs  factory.rs  hid.rs  ids.rs  lib.rs  report.rs  synthetic.rs
crates/device-dualshock3/: Cargo.toml
crates/device-dualshock3/src/: device.rs  factory.rs  lib.rs  report.rs
crates/device-hopx/: Cargo.toml
crates/device-hopx/src/: device.rs  diagnostics.rs  factory.rs  lib.rs  protocol.rs
crates/device-joycon/: Cargo.toml
crates/device-joycon/src/: axis_remap.rs  calibration.rs  clone_detection.rs  factory.rs  hid.rs  ids.rs  jc1.rs  jc2.rs  lib.rs  report.rs  reset_buttons.rs  spi_cal.rs  subcmd.rs  synthetic.rs
crates/device-joycon/tests/: factory_filter.rs  kind_id.rs  spi_reconciliation.rs  synthetic_e2e.rs
crates/device-psmove/: Cargo.toml
crates/device-psmove/src/: axis_remap.rs  calibration.rs  device.rs  diagnostics.rs  factory.rs  hid.rs  ids.rs  lib.rs  pairing.rs  report.rs  synthetic.rs
crates/device-remote/: Cargo.toml
crates/device-remote/src/: device.rs  factory.rs  lib.rs  protocol.rs
crates/device-steam-controller/: Cargo.toml
crates/device-steam-controller/src/: device.rs  factory.rs  ids.rs  lib.rs  report.rs  scale.rs  subcmd.rs  synthetic.rs
crates/device-steam-deck/: Cargo.toml
crates/device-steam-deck/src/: device.rs  lizard.rs  report.rs  scale.rs
crates/device-tesla/: Cargo.toml
crates/device-tesla/src/: api.rs  auth.rs  config.rs  device.rs  factory.rs  imu.rs  lib.rs  synthetic.rs
crates/device-traits/: Cargo.toml
crates/device-traits/src/: device.rs  events.rs  health.rs  lib.rs  mock.rs  reset.rs  stores.rs
crates/device-traits/tests/: health_classifier.rs  reset_detector.rs  stores.rs
crates/device-vita/: Cargo.toml
crates/device-vita/src/: device.rs  factory.rs  lib.rs
crates/device-wii/: Cargo.toml
crates/device-wii/src/: device.rs  diagnostics.rs  factory.rs  lib.rs
crates/everything-imu-app/: Cargo.toml  tauri.conf.json
crates/everything-imu-app/capabilities/: default.json
crates/everything-imu-app/src/: commands.rs  dto.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  supervisor_boot.rs  tracker_emitter.rs  tray.rs  udp_haptic.rs  updater.rs
crates/headless-cli/: Cargo.toml
crates/headless-cli/src/: main.rs
crates/imu-fusion/: Cargo.toml
crates/imu-fusion/fixtures/: README.md  regenerate.py  vqf_oracle.json
crates/imu-fusion/src/: basic_vqf.rs  lib.rs  madgwick.rs  vqf.rs
crates/imu-fusion/tests/: basic_vqf_subset.rs  madgwick_synth.rs  vqf_oracle.rs  vqf_synth.rs  wire_roundtrip.rs
crates/imu-math/: Cargo.toml
crates/imu-math/src/: coord.rs  lib.rs  mag_cal.rs  mag_cal_wizard.rs  quat.rs
crates/imu-math/tests/: coord_remap.rs  gravity.rs  handedness.rs  props.rs
crates/jni-android/: Cargo.toml
crates/jni-android/src/: lib.rs
crates/osc-haptics/: Cargo.toml
crates/osc-haptics/src/: lib.rs  listener.rs  sniffer.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 001_init.sql
crates/persistence/src/: bias.rs  db.rs  error.rs  history.rs  lib.rs  settings.rs
crates/persistence/tests/: bias_roundtrip.rs  concurrent.rs  migration.rs  settings_roundtrip.rs
crates/slime-tracker/: Cargo.toml
crates/slime-tracker/src/: client.rs  clientbound.rs  lib.rs  serverbound.rs
crates/slime-tracker/tests/: byte_compat.rs  loopback_fallback.rs  reference_compat.rs
mobile/app-mobile/: build.gradle.kts
mobile/app-wear/: build.gradle.kts
mobile/core/: build.gradle.kts
mobile/gradle/: libs.versions.toml
mobile/scripts/: verify-handshake.py
(+67 files in other folders)
