[workspace]
resolver = "2"
members = [
    "crates/slime-tracker",
    "crates/imu-math",
    "crates/imu-fusion",
    "crates/device-traits",
    "crates/device-joycon",
    "crates/device-dualsense",
    "crates/device-psmove",
    "crates/device-wii",
    "crates/device-steam-deck",
    "crates/device-steam-controller",
    "crates/osc-haptics",
    "crates/device-tesla",
    "crates/persistence",
    "crates/core",
    "crates/everything-imu-app",
    "crates/headless-cli",
    "crates/jni-android",
]

[workspace.package]
version = "1.0.0-beta.10"
edition = "2021"
rust-version = "1.88"
authors = ["Matias Palma <matiaspalma2594@gmail.com>"]
license = "MIT"
repository = "https://github.com/matiaspalmac/everything-imu"

[workspace.dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1", default-features = false }
btleplug = "0.12"
futures-util = "0.3"
uuid = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
nalgebra = "0.34"
deku = { version = "0.20", default-features = false, features = ["alloc"] }
proptest = "1.5"
approx = "0.5"
async-trait = "0.1"
hidapi = { version = "2.6", default-features = false, features = ["windows-native", "linux-static-hidraw"] }
clap = { version = "4.5", features = ["derive"] }
arc-swap = "1.7"
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
