[package]
name = "headless-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "everything-imu-cli"
path = "src/main.rs"

[dependencies]
everything-imu-core = { path = "../../crates/core" }
device-joycon = { path = "../../crates/device-joycon", features = ["synthetic-source"] }
device-dualsense = { path = "../../crates/device-dualsense", features = ["synthetic-source"] }
device-psmove = { path = "../../crates/device-psmove", features = ["synthetic-source"] }
device-wii = { path = "../../crates/device-wii" }
device-3ds = { path = "../../crates/device-3ds" }
device-vita = { path = "../../crates/device-vita" }
device-dualshock3 = { path = "../../crates/device-dualshock3" }
device-steam-deck = { path = "../../crates/device-steam-deck", features = ["synthetic-source"] }
device-steam-controller = { path = "../../crates/device-steam-controller", features = ["synthetic-source"] }
device-tesla = { path = "../../crates/device-tesla", features = ["synthetic-source"] }
device-hopx = { path = "../../crates/device-hopx" }
device-traits = { path = "../../crates/device-traits" }
persistence = { path = "../../crates/persistence" }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
