[package]
name = "device-dualshock3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DualShock 3 / SIXAXIS (PS3) IMU device driver — experimental (accel + single-axis gyro)"

[dependencies]
device-traits = { path = "../device-traits" }
hidapi = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
