[package]
name = "device-hopx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BLE IMU tracker driver over the Nordic UART Service — streams accel/gyro from a compact nRF52 motion puck as a virtual SlimeVR tracker"

[features]
default = []

[dependencies]
device-traits = { path = "../device-traits" }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
btleplug = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["macro-diagnostics"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
approx = { workspace = true }
