[package]
name = "device-steam-deck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Steam Deck integrated controller IMU bridge (BMI260 @250Hz via hid-steam)"

[features]
default = []
synthetic-source = []

[dependencies]
device-traits = { path = "../device-traits" }
hidapi = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
approx = { workspace = true }

[lints]
workspace = true
