[package]
name = "device-tesla"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Tesla Fleet API streaming bridge — turns a Tesla vehicle's heading/speed feed into a virtual IMU tracker"

[features]
default = []
synthetic-source = []

[dependencies]
device-traits = { path = "../device-traits" }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "net"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
approx = { workspace = true }

[lints]
workspace = true
