[package]
name = "device-wii"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
device-traits = { path = "../device-traits" }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "net", "io-util"] }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
