[package]
name = "headless-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "everything-imu-cli"
path = "src/main.rs"

[dependencies]
everything-imu-core = { path = "../core" }
device-joycon = { path = "../device-joycon", features = ["synthetic-source"] }
device-dualsense = { path = "../device-dualsense", features = ["synthetic-source"] }
device-psmove = { path = "../device-psmove", features = ["synthetic-source"] }
device-wii = { path = "../device-wii" }
device-3ds = { path = "../device-3ds" }
device-vita = { path = "../device-vita" }
device-dualshock3 = { path = "../device-dualshock3" }
device-steam-deck = { path = "../device-steam-deck", features = ["synthetic-source"] }
device-steam-controller = { path = "../device-steam-controller", features = ["synthetic-source"] }
device-tesla = { path = "../device-tesla", features = ["synthetic-source"] }
device-hopx = { path = "../device-hopx" }
device-traits = { path = "../device-traits" }
persistence = { path = "../persistence" }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
