[package]
name = "imu-fusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra = { workspace = true }
imu-math = { path = "../imu-math" }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
slime-tracker = { path = "../slime-tracker" }

[lints]
workspace = true
