[package]
name = "imu-math"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
