[package]
name = "jni-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
imu-fusion = { path = "../imu-fusion" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22", default-features = false }
