[package]
name = "osc-haptics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rosc = "0.11"
tokio = { workspace = true, features = ["net", "sync", "rt", "time", "macros"] }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "sync", "rt", "time", "macros", "rt-multi-thread"] }

[lints]
workspace = true
